fix: react searches overlapping

--- a/src/component/SearchOverlay/SearchOverlay.style.scss
+++ b/src/component/SearchOverlay/SearchOverlay.style.scss
@@ -79,6 +79,7 @@
             padding-bottom: 2px;
             padding-top : 2px;
             padding-left: 0px !important;
+            overflow: hidden;
             .SearchSuggestion {
                 &-TrandingTag {
                     font-size: 13px;
